[project]
name = "callcenter-env"
version = "0.1.0"
description = "E-commerce RL Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openenv-core[core]>=0.2.1"
]

# 🔥 IMPORTANT (fixes script error)
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
